--- a/bims/templates/navigation_bar.html
+++ b/bims/templates/navigation_bar.html
@@ -93,6 +93,7 @@
                        aria-haspopup="true" aria-expanded="false">Data</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown01">
                         <a class="dropdown-item" href="{{ domain_name }}/source-references/">Source References</a>
+                        <a class="dropdown-item" href="{{ domain_name }}/site-visit/list/">Site Visits</a>
                     </div>
                 </li>
                 {%  if preferences.SiteSetting.blog_page_link %}
