--- a/bims/templates/site_visit/site_visit_list.html
+++ b/bims/templates/site_visit/site_visit_list.html
@@ -17,37 +17,6 @@
             font-size: 10pt !important;
         }
 
-        .pagination-centered {
-            text-align: center;
-        }
-
-        ul.pagination {
-            display: flex;
-            align-items: center;
-            list-style: none;
-        }
-
-        ul.pagination li {
-            display: inline-block;
-            margin-left: 1rem;
-        }
-
-        ul.pagination li.arrow {
-            font-size: 2rem;
-        }
-
-        ul.pagination li a {
-            margin-right: 1rem;
-        }
-
-        ul.pagination li.current a {
-            font-weight: bold;
-            background-color: #18A090 !important;
-            border-radius: 3rem;
-            padding: 0.3rem 0.8rem;
-            color: #fff;
-        }
-
         .counter {
             background-color: #efefef;
             padding: 0.1rem 0.5rem;
@@ -70,9 +39,9 @@
 {% block body_content %}
     <div class="body-form container">
         <div class="dashboard-title">
-            <h2>Site visits</h2>
-            <div class="dashboard-close" data-destination="/map"><i
-                    class="fa fa-times" aria-hidden="true"></i></div>
+            <h2>Site visits&nbsp;<span class="vertical-separator"></span>{{ page_obj.paginator.count }} Result{% if page_obj.paginator.count > 1 %}s{% endif %}</h2>
+{#            <div class="dashboard-close" data-destination="/map"><i#}
+{#                    class="fa fa-times" aria-hidden="true"></i></div>#}
         </div>
 
         <div class="row">
@@ -148,26 +117,12 @@
         </div>
 
         {% if is_paginated %}
-            <div class="pagination-centered">
-                <ul class="pagination">
-                    {% if page_obj.has_previous %}
-                        <li class="arrow"><a
-                                href="?page={{ page_obj.previous_page_number }}{% for key, value in request.GET.items %}{% if key != 'page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}"
-                                class="pagination">&laquo;</a></li>
-                    {% endif %}
-                    <li class="current">
-                        <a href="">{{ page_obj.number }}</a>
-                        {{ page_obj.start_index }} - {{ page_obj.end_index }}
-                    </li>
-                    {% if page_obj.has_next %}
-                        <li class="arrow"><a
-                                href="?page={{ page_obj.next_page_number }}{% for key, value in request.GET.items %}{% if key != 'page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}"
-                                class="pagination">&raquo;</a></li>
-                    {% endif %}
-                </ul>
+             <div class="paginator-wrapper">
+                {% include 'paginator_template.html' %}
             </div>
         {% endif %}
     </div>
+    {% include 'footer.html' %}
 {% endblock %}
 
 {% block foot %}
