Add source references

--- a/bims/templates/source_reference_list.html
+++ b/bims/templates/source_reference_list.html
@@ -107,8 +107,7 @@
                                             class="badge badge-info badge-occurrences">{{ source_reference.occurrences }} records</span>
                                     </a>
                                 {% else %}
-                                    <span
-                                            class="badge badge-info badge-occurrences badge-zero">{{ source_reference.occurrences }} records</span>
+                                    <span class="badge badge-info badge-occurrences badge-zero">{{ source_reference.occurrences }} records</span>
                                 {% endif %}
                             </p>
                         </div>
