Add change password

--- a/bims/templates/account/password_change.html
+++ b/bims/templates/account/password_change.html
@@ -1,28 +1,67 @@
-{% extends "socialaccount/base.html" %}
-
+{% extends 'main_base.html' %}
 {% load i18n %}
+{% load account socialaccount %}
+{% load static from staticfiles %}
 {% load bootstrap_tags %}
 
-{% block title %}{% trans "Password change" %}{% endblock %}
+{% block subtitle %}Password change{% endblock %}
 
-{% block body_outer %}
-    <div class="page-header">
-        <h2>{% trans "Password Change" %}</h2>
-    </div>
-    <div class="row">
-        <div class="col-md-8">
-            <p class="lead">{% trans "Change your password here" %}</p>
-            <form method="POST" action="">
-                <fieldset>
-                    {% csrf_token %}
-                    {{ form|as_bootstrap }}
-                    <div class="form-actions">
-                        <button type="submit"
-                                class="btn btn-primary">{% trans "Change my password" %}</button>
+
+{% block head %}
+    <link rel="stylesheet" href="{% static 'css/form.css' %}">
+    <link rel="stylesheet" href="{% static 'css/account.css' %}">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
+    <script src="{% static 'js/libs/chosen/chosen.jquery.min.js' %}"></script>
+    <script src="{% static 'js/form.js' %}"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('a.google').html($('.google-button'));
+            $('a.github').html($('.github-button'));
+        });
+    </script>
+{% endblock %}
+
+{% block body_content %}
+    <div class="content">
+        <div class="container" style="margin-bottom: 100px;">
+            <div class="custom-form-container">
+                {% if messages %}
+                    <ul class="errorlist">
+                        {% for message in messages %}
+                            <li{% if message.tags %}
+                                class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+                <div class="page-header">
+                    <h2>{% trans "Password Change" %}</h2>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <p class="lead">{% trans "Change your password here" %}</p>
+                        <form method="POST" action="">
+                            {% if form.non_field_errors %}
+                                <div class="alert alert-warning">
+                                    {% for error in form.non_field_errors %}
+                                        <p>{{ error }}</p>
+                                    {% endfor %}
+                                </div>
+                            {% endif %}
+                            <fieldset>
+                                {% csrf_token %}
+                                {{ form.as_p }}
+                                <div class="form-actions">
+                                    <button type="submit"
+                                            class="btn btn-primary">{% trans "Change my password" %}</button>
+                                </div>
+                            </fieldset>
+                        </form>
                     </div>
-                </fieldset>
-            </form>
+                </div>
+            </div>
         </div>
-    </div>
-
 {% endblock %}
