--- a/bims/templates/user/profile.html
+++ b/bims/templates/user/profile.html
@@ -58,6 +58,8 @@
 
                 {% if request.user == object %}
                     <button class="btn btn-outline-secondary edit-button">Edit Profile</button>
+                    <div style="height: 10px;"></div>
+                    <a href="/account/password/change/" class="btn btn-outline-secondary edit-button">Set/Change Password</a>
                 {% endif %}
                 <div style="height: 20px"></div>
             </div>
