--- a/bims/static/css/base.css
+++ b/bims/static/css/base.css
@@ -322,7 +322,14 @@ h6 {
     width: 100%;
     padding-top: 40px;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
+}
+
+
+@media (max-width: 450px) {
+    .paginator-wrapper {
+        font-size: 7pt;
+    }
 }
 
 .page-item.active .page-link {
