--- a/bims/templates/source_reference_list.html
+++ b/bims/templates/source_reference_list.html
@@ -114,8 +114,10 @@
                     </div>
                 {% endfor %}
             </div>
+            <div class="container">
             <div class="paginator-wrapper">
                 {% include 'paginator_template.html' %}
+            </div>
             </div>
         </div>
     </div>
