--- a/bims/templates/site_visit/site_visit_list.html
+++ b/bims/templates/site_visit/site_visit_list.html
@@ -3,6 +3,7 @@
 {% block subtitle %}
     Site visit list
 {% endblock %}
+{% load humanize %}
 
 {% block head %}
 
@@ -15,37 +16,6 @@
     <style>
         .btn-sm {
             font-size: 10pt !important;
-        }
-
-        .pagination-centered {
-            text-align: center;
-        }
-
-        ul.pagination {
-            display: flex;
-            align-items: center;
-            list-style: none;
-        }
-
-        ul.pagination li {
-            display: inline-block;
-            margin-left: 1rem;
-        }
-
-        ul.pagination li.arrow {
-            font-size: 2rem;
-        }
-
-        ul.pagination li a {
-            margin-right: 1rem;
-        }
-
-        ul.pagination li.current a {
-            font-weight: bold;
-            background-color: #18A090 !important;
-            border-radius: 3rem;
-            padding: 0.3rem 0.8rem;
-            color: #fff;
         }
 
         .counter {
@@ -70,9 +40,9 @@
 {% block body_content %}
     <div class="body-form container">
         <div class="dashboard-title">
-            <h2>Site visits</h2>
-            <div class="dashboard-close" data-destination="/map"><i
-                    class="fa fa-times" aria-hidden="true"></i></div>
+            <h2>Site visits&nbsp;<span class="vertical-separator"></span>{{ page_obj.paginator.count|intcomma }} Result{% if page_obj.paginator.count > 1 %}s{% endif %}</h2>
+{#            <div class="dashboard-close" data-destination="/map"><i#}
+{#                    class="fa fa-times" aria-hidden="true"></i></div>#}
         </div>
 
         <div class="row">
@@ -83,19 +53,19 @@
                         <tr class="metric">
                             <td>Site visits</td>
                             <td><span
-                                    class="counter">{{ page_obj.paginator.count }}</span>
+                                    class="counter">{{ page_obj.paginator.count|intcomma }}</span>
                             </td>
                         </tr>
                         <tr class="metric">
                             <td>Sites</td>
                             <td><span
-                                    class="counter">{{ total_sites }}</span>
+                                    class="counter">{{ total_sites|intcomma }}</span>
                             </td>
                         </tr>
                         <tr class="metric">
                             <td>Records</td>
                             <td><span
-                                    class="counter">{{ total_records }}</span>
+                                    class="counter">{{ total_records|intcomma }}</span>
                             </td>
                         </tr>
                     </table>
@@ -116,7 +86,7 @@
                 <table class="table table-striped">
                     <thead>
                     <tr>
-                        <th scope="col">Site code/name</th>
+                        <th scope="col" style="width:200px">Site code/name</th>
                         <th scope="col">Collection date</th>
                         <th scope="col">Owner</th>
                         <th scope="col">Collector</th>
@@ -127,10 +97,10 @@
                     <tbody>
                     {% for site_visit in survey_list %}
                         <tr>
-                            <td>{{ site_visit.site.site_code }}</td>
+                            <td>{{ site_visit.site.location_site_identifier }}</td>
                             <td>{{ site_visit.date }}</td>
-                            <td>{{ site_visit.owner.get_full_name }}</td>
-                            <td>{{ site_visit.collector_user.get_full_name }}</td>
+                            <td><a href="/profile/{{ site_visit.owner.username }}/">{{ site_visit.owner.get_full_name }}</a></td>
+                            <td><a href="/profile/{{ site_visit.collector_user.username }}/">{{ site_visit.collector_user.get_full_name }}</a></td>
                             <td>{{ site_visit.total }}</td>
                             <td>
                                 <a href="/site-visit/detail/{{ site_visit.id }}/"
@@ -148,26 +118,12 @@
         </div>
 
         {% if is_paginated %}
-            <div class="pagination-centered">
-                <ul class="pagination">
-                    {% if page_obj.has_previous %}
-                        <li class="arrow"><a
-                                href="?page={{ page_obj.previous_page_number }}{% for key, value in request.GET.items %}{% if key != 'page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}"
-                                class="pagination">&laquo;</a></li>
-                    {% endif %}
-                    <li class="current">
-                        <a href="">{{ page_obj.number }}</a>
-                        {{ page_obj.start_index }} - {{ page_obj.end_index }}
-                    </li>
-                    {% if page_obj.has_next %}
-                        <li class="arrow"><a
-                                href="?page={{ page_obj.next_page_number }}{% for key, value in request.GET.items %}{% if key != 'page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}"
-                                class="pagination">&raquo;</a></li>
-                    {% endif %}
-                </ul>
+             <div class="paginator-wrapper">
+                {% include 'paginator_template.html' %}
             </div>
         {% endif %}
     </div>
+    {% include 'footer.html' %}
 {% endblock %}
 
 {% block foot %}
