--- a/bims/templates/navigation_bar.html
+++ b/bims/templates/navigation_bar.html
@@ -93,6 +93,7 @@
                        aria-haspopup="true" aria-expanded="false">Data</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown01">
                         <a class="dropdown-item" href="{{ domain_name }}/source-references/">Source References</a>
+                        <a class="dropdown-item" href="{{ domain_name }}/site-visit/list/">Site Visits</a>
                     </div>
                 </li>
                 {%  if preferences.SiteSetting.blog_page_link %}
@@ -125,15 +126,17 @@
                            id="dropdown01" data-toggle="dropdown"
                            aria-haspopup="true" aria-expanded="false">{{ user.first_name }}</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
+                            <a class="dropdown-item" href="/profile/">Profile</a>
+                            <div class="dropdown-divider"></div>
                             {% if user.is_staff or user.is_superuser %}
-                                <a class="dropdown-item" id="navbar-geonode" href="/upload-taxa/">Upload Taxa</a>
-                                <a class="dropdown-item" id="navbar-geonode" href="/upload-collections/">Upload Collections</a>
-                                <a class="dropdown-item" id="navbar-geonode" href="/harvest-collections/">Harvest From GBIF</a>
-                                <a class="dropdown-item" id="navbar-geonode" href="/dashboard-management/">Edit Dashboard</a>
-                                <a class="dropdown-item" id="navbar-geonode" href="/taxa-management/">Edit Taxa</a>
+                                <a class="dropdown-item" href="/upload-taxa/">Upload Taxa</a>
+                                <a class="dropdown-item" href="/upload-collections/">Upload Collections</a>
+                                <a class="dropdown-item" href="/harvest-collections/">Harvest From GBIF</a>
+                                <a class="dropdown-item" href="/dashboard-management/">Edit Dashboard</a>
+                                <a class="dropdown-item" href="/taxa-management/">Edit Taxa</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="/admin/">Admin Page</a>
-                                <a class="dropdown-item" id="navbar-geonode" href="/cms">Wagtail Admin</a>
+                                <a class="dropdown-item" href="/cms">Wagtail Admin</a>
                             {% endif %}
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/accounts/logout/">Log Out</a>
