--- a/bims/templates/navigation_bar.html
+++ b/bims/templates/navigation_bar.html
@@ -125,7 +125,7 @@
                         <a class="nav-link dropdown-toggle" href="#"
                            id="dropdown01" data-toggle="dropdown"
                            aria-haspopup="true" aria-expanded="false">{{ user.first_name }}</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdown01">
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
                             <a class="dropdown-item" href="/profile/">Profile</a>
                             <div class="dropdown-divider"></div>
                             {% if user.is_staff or user.is_superuser %}
