--- a/bims/templates/map_page/side-panel-templates.html
+++ b/bims/templates/map_page/side-panel-templates.html
@@ -229,32 +229,29 @@
 <script type='text/html' id='site-details-template'>
     <div class="container-fluid" id="site-details-wrapper">
         <div class="row">
-            <div class="col-4 caption-column">FBIS Site Code</div>
-            <div class="col-8 value-column"><%= fbis_site_code %></div>
+            <div class="col-4 caption-column">Site Code</div>
+            <div class="col-8 value-column"><%= site_detail_info.site_code %></div>
         </div>
         <div class="row">
             <div class="col-4 caption-column">Site Description</div>
-            <div class="col-8 value-column"><%= site_description %></div>
+            <div class="col-8 value-column"><%= site_detail_info.site_description %></div>
         </div>
         <div class="row">
             <div class="col-4 caption-column">Site Coordinates</div>
-            <div class="col-8 value-column"><%= site_coordinates %></div>
+            <div class="col-8 value-column"><%= site_detail_info.site_coordinates %></div>
         </div>
-        <div class="row">
-            <div class="col-4 caption-column">Geomorphological Zone</div>
-            <div class="col-8 value-column"><%= geomorphological_zone %></div>
-        </div>
-        <div class="row">
-            <div class="col-4 caption-column">SA Ecoregion level 1</div>
-            <div class="col-8 value-column"><%= ecological_region %></div>
-        </div>
-        <div class="row">
-            <div class="col-4 caption-column">SA Ecoregion level 2</div>
-            <div class="col-8 value-column"><%= ecological_region_2 %></div>
-        </div>
+        <% _.each(location_context, function (value, key) { %>
+            <% if (key.indexOf("Geomorphological") > -1 && refined_geomorphological) {
+                value = refined_geomorphological
+            } %>
+            <div class="row">
+                <div class="col-4 caption-column"><%= key %></div>
+                <div class="col-8 value-column"><%= value %></div>
+            </div>
+        <% }); %>
         <div class="row">
             <div class="col-4 caption-column">River</div>
-            <div class="col-8 value-column"><%= river %></div>
+            <div class="col-8 value-column"><%= site_detail_info.river %></div>
         </div>
     </div>
 </script>
