--- a/bims/templates/user/profile.html
+++ b/bims/templates/user/profile.html
@@ -257,6 +257,16 @@
                 scales: {
                     xAxes: [{
                         type: 'time',
+                        time: {
+                            displayFormats: {
+                                quarter: 'll'
+                            }
+                        }
+                    }],
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
                     }]
                 }
             };
