--- a/bims/templates/source_reference_list.html
+++ b/bims/templates/source_reference_list.html
@@ -128,30 +128,8 @@
     <!-- Plugin JavaScript -->
     <script src="{% static "js/libs/jquery/jquery-3.3.1.min.js" %}"></script>
     <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
+    <script src="{% static "js/utils/insert_param_to_url.js" %}"></script>
     <script>
-
-        function insertParam(key, value) {
-            key = encodeURIComponent(key);
-            value = encodeURIComponent(value);
-            // kvp looks like ['key1=value1', 'key2=value2', ...]
-            var kvp = document.location.search.substr(1).split('&');
-            let i = 0;
-            for (; i < kvp.length; i++) {
-                if (kvp[i].startsWith(key + '=')) {
-                    let pair = kvp[i].split('=');
-                    pair[1] = value;
-                    kvp[i] = pair.join('=');
-                    break;
-                }
-            }
-            if (i >= kvp.length) {
-                kvp[kvp.length] = [key, value].join('=');
-            }
-            // can return this or...
-            let params = kvp.join('&');
-            // reload page with new params
-            document.location.search = params;
-        }
 
         $('.custom-control-input').change(function (e) {
             let $parent = $(e.target).parent().parent();
