--- a/bims/templates/404.html
+++ b/bims/templates/404.html
@@ -35,7 +35,7 @@
 
 <h1 id="error-title">404 - PAGE NOT FOUND</h1>
 <h4>
-    Sorry but the page you are looking for does not exists, have been removed, name changed or is temporarily unavailable
+    Sorry but the page you are looking for does not exist, have been removed, name changed or is temporarily unavailable
 </h4>
 <button type="button" class="btn btn-outline-primary btn-lg" onclick="location.href='/';">RETURN TO HOMEPAGE</button>
 </div>
