Add backups management

--- a/deployment/ansible/development/roles/docker_compose/templates/docker-compose.override.yml.j2
+++ b/deployment/ansible/development/roles/docker_compose/templates/docker-compose.override.yml.j2
@@ -68,6 +68,7 @@ services:
       - ./media:/home/web/media:rw
       - ./logs:/var/log/
       - ../.pycharm_helpers:/root/.pycharm_helpers
+      - ./backups:/home/web/backups
     ports:
       # for django test server
       - "{{ docker_port_forward.django.http }}:8080"
