--- a/bims/templates/navigation_bar.html
+++ b/bims/templates/navigation_bar.html
@@ -137,6 +137,7 @@
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="/admin/">Admin Page</a>
                                 <a class="dropdown-item" href="/cms">Wagtail Admin</a>
+                                <a class="dropdown-item" href="/backups-management">Backups</a>
                             {% endif %}
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/accounts/logout/">Log Out</a>
